@@ -1,6 +1,8 @@
 ﻿1.1.1 (next)
 ------------------
 + [enhancement] updated fj-bom to 1.2.4 [1.1.1-rc.1]
++ [enhancement] fixed sonar cloud issues [1.1.1-rc.1]
++ [enhancement] [fj-daogen-tool] main class moved from default package to tool.Daogen [1.1.1-rc.1]
 
 1.1.0 (2023-08-24)
 ------------------
